--- a/client/src/components/IniciarSesion/IniciarSesion.css
+++ b/client/src/components/IniciarSesion/IniciarSesion.css
@@ -10,14 +10,13 @@
   background-image: url("../img/castroBackgroun.jpg");
 }
 
-form {
+#divForm{
   display: flex;
   flex-direction: column;
   text-align: center;
   padding: 100px 80px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 15px;
-  box-shadow: 20px 20px 30px 0px rgba(0, 0, 0, 0.4);
   background-color: rgba(0,0,0,0.1);
   
 }
@@ -114,6 +113,13 @@ form button:hover{
   color: black;
   border-color: whitesmoke;
   cursor: pointer;
+}
+
+#logoLogin{
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 @keyframes anim {
