--- a/client/src/components/Registro/Registro.css
+++ b/client/src/components/Registro/Registro.css
@@ -1,6 +1,14 @@
+#divRegister{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 100px 80px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  background-color: rgba(0,0,0,0.1);
+}
+
 .Registro{
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
   display: flex;
@@ -10,20 +18,25 @@
   background-image: url("../img/castroBackgroun.jpg");
 }
 
-
-
-.logoRegister{
-  position: absolute;
-  margin-top: -550px;
-  margin-left: 300px;
-  border-radius: 15px;
-  width: 230px;
-}
-
 .textInput{
   color: black;
 }
 
-#eye{
-  margin-top: 15px;
+#logoRegister{
+  position: absolute;
+  top: -1%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.div-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: -30px;
+}
+
+#register{
+  margin-top: 100px;
+  border-radius: 15px;
+  box-shadow: 20px 20px 30px 0px rgba(0, 0, 0, 0.4);
 }
