Creacion de historial

--- a/client/src/components/History/History.css
+++ b/client/src/components/History/History.css
@@ -45,6 +45,9 @@
     justify-content: center;
 }
 
-*{
-    overflow: hidden;
+.contentHistory{
+    position: relative;
+    margin-left: 250px;
+    height: auto;
+    background-color: #F8F8FF;
 }
