--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,12 @@
 @tailwind utilities;
 
 .content{
+  position: relative;
   margin-left: 250px;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   background-color: #F8F8FF;
+  overflow: hidden;
 }
 
 .title{
@@ -48,7 +51,7 @@
 
 #imagePUJ{
   position: relative;
-  width: 1000px;
+  width: 910px;
   right: 16px;
   margin-top: 20px;
 }
